--- a/src/components/repositoryCommand/index.module.css
+++ b/src/components/repositoryCommand/index.module.css
@@ -14,7 +14,6 @@
 .homeCommand {
   display: inline-flex;
   align-items: baseline;
-  gap: var(--spacing-xs);
   text-decoration: none;
 }
 
@@ -56,8 +55,7 @@
 }
 
 @media (max-width: 599px) {
-  .container,
-  .homeCommand {
+  .container {
     gap: var(--spacing-xxs);
   }
 }
